samples/_failures_safe/1761371182_63b153_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_62f50032.c: In function ‘read_operator’:
./samples/SAFE/__tmp_62f50032.c:145:5: error: expected declaration or statement at end of input
  145 |     size_t value_pos = 0;
      |     ^~~~~~
